# seahorse-lang

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: check-examples.yml  check-tests.yml
data/: pyth.csv  seahorse_prelude.py  seahorse_src_template.py
data/const/: readme.md  seahorse_prelude.py  seahorse_pyth.py
docs/: README.md  SUMMARY.md
docs/integrations/: pyth.md
docs/introduction/: calculator-your-first-seahorse-program.md  installation.md  seahorse-community.md
docs/reference/: the-seahorse-cli.md
docs/using-seahorse/: accounts.md  cross-program-invocations-cpis.md  instructions.md  spl-tokens.md  the-seahorse-language.md
examples/: calculator.py  constants.py  event.py  fizzbuzz.py  hello.py  pyth.py  stored_mutables.py
examples/util/: more_data.py
seahorse_py/: test.py
seahorse_py/seahorse/: prelude.py
src/: data.rs  lib.rs
src/core/: README.md  compiler.rs  mod.rs  python_ast.rs  seahorse_ast.rs  to_python_ast.rs  to_rust_source.rs  util.rs
src/core/clean/: ast.rs  mod.rs
src/core/compile/: ast.rs  mod.rs
src/core/compile/builtin/: mod.rs  prelude.rs  pyth.rs  python.rs  (+1 more)
src/core/generate/: mod.rs
src/core/parse/: mod.rs  parser.rs
src/core/preprocess/: mod.rs
src/core/to_seahorse_ast/: from_python_ast.rs  mod.rs  transform.rs
tests/: check-for-changes.sh  compile-examples.sh  compile-tests.sh
tests/compiled-examples/: calculator.rs  constants.rs  event.rs  fizzbuzz.rs  hello.rs  pyth.rs  stored_mutables.rs
tests/compiled-test-cases/: account_key.rs
tests/test-cases/: README.md  account_key.py
(+3 files in other folders)
