[package]
name = "seahorse-lang"
version = "0.2.7"
edition = "2021"
license = "MIT"
description = "Write Anchor-compatible Solana programs in Python"
homepage = "https://seahorse-lang.org/"
repository = "https://github.com/ameliatastic/seahorse-lang/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "seahorse"

[build-dependencies]
proc-macro2 = "1.0.40"
quote = "1.0.20"

[dependencies]
base58 = "0.2.0"
clap = { version = "3.2.8", features = ["derive", "cargo"] }
heck = "0.4.0"
owo-colors = "3.4.0"
proc-macro2 = "1.0.40"
quote = "1.0.20"
regex = "1.5.6"
rustpython-parser = "0.1.2"
spinners = "4.1.0"
toml_edit = "0.14.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustfmt-wrapper = "0.2.0"